cmake_minimum_required(VERSION 3.9)
project(cpp-examples)

set(CXX_STANDARD 14 CACHE STRING "C++ Standard")

set(CMAKE_CXX_STANDARD ${CXX_STANDARD})

function(add_executables)
  string(REPLACE "${EXAMPLES_COMMON_PREFIX}/" "" exe_prefix ${CMAKE_CURRENT_LIST_DIR})
  string(REPLACE "/" "-" exe_prefix ${exe_prefix})
  file(GLOB source_list RELATIVE ${CMAKE_CURRENT_LIST_DIR} "*.cpp")
  foreach(file_path ${source_list})
    string(REPLACE ".cpp" "" name ${file_path})
    
    if(${name} MATCHES "(.)*cxx17")
      if(CXX_STANDARD STRLESS 17)
        message("Skipped ${file_path} because CXX_STANDARD is ${CXX_STANDARD}")
      else()
        message("Generating ${file_path}...")
        add_executable("${exe_prefix}-${name}" ${file_path})
      endif()
    elseif(${name} MATCHES "(.)*cxx14")
      if(CXX_STANDARD STRLESS 14)
        message("Skipped ${file_path} because CXX_STANDARD is ${CXX_STANDARD}")
      else()
        message("Generating ${file_path}...")
        add_executable("${exe_prefix}-${name}" ${file_path})
      endif()
    else()
      message("Generating ${file_path}...")
      add_executable("${exe_prefix}-${name}" ${file_path})
    endif()
  endforeach()
endfunction(add_executables)

add_subdirectory(examples)
